--- a/app/src/main/res/layout/activity_cpd_profile.xml
+++ b/app/src/main/res/layout/activity_cpd_profile.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".audit.cpdProfile">
 
+    <!--TODO: FIX THIS LAYOUT-->
+
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout2"
         android:layout_width="match_parent"
