--- a/app/src/main/res/layout/auditbuilder_view_layout.xml
+++ b/app/src/main/res/layout/auditbuilder_view_layout.xml
@@ -16,7 +16,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        app:cardBackgroundColor="#42A5F5"
+        app:cardBackgroundColor="@color/colorAccent"
         app:cardCornerRadius="0dp"
         app:cardElevation="5dp"
         app:contentPadding="0dp"
@@ -30,7 +30,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <!--TODO: LAYOUT NEEDS WORK-->
             <TextView
                 android:id="@+id/auditActivityName"
                 android:layout_width="0dp"
@@ -40,14 +39,31 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:padding="5dp"
-                android:text="TextView"
+                android:text="Activity Name"
                 android:textAlignment="viewStart"
-                android:textColor="#000"
+                android:textColor="#000000"
                 android:textSize="15sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/auditCardView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/auditActivityDate"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:padding="5dp"
+                android:text="Date"
+                android:textAlignment="viewStart"
+                android:textColor="#000000"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/cardView"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.cardview.widget.CardView
@@ -69,11 +85,11 @@
                     android:layout_height="wrap_content">
 
                     <TextView
-                        android:id="@+id/auditActivityDescription"
+                        android:id="@+id/auditActivityType"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:padding="2dp"
-                        android:text="TextView"
+                        android:text="Activity Type"
                         android:textAlignment="viewStart"
                         android:textColor="#000000"
                         android:textSize="14sp"
