--- a/app/src/main/res/layout/auditview_view_layout.xml
+++ b/app/src/main/res/layout/auditview_view_layout.xml
@@ -16,7 +16,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        app:cardBackgroundColor="#42A5F5"
+        app:cardBackgroundColor="@color/colorAccent"
         app:cardCornerRadius="0dp"
         app:cardElevation="5dp"
         app:contentPadding="0dp"
@@ -30,24 +30,39 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <!--TODO: LAYOUT NEEDS WORK-->
             <TextView
                 android:id="@+id/auditViewActivityName"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:padding="5dp"
-                android:text="TextView"
+                android:text="Activity Name"
                 android:textAlignment="viewStart"
                 android:textColor="#000"
                 android:textSize="15sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/auditViewCardView"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/auditActivityDate"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/auditActivityDate"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:padding="5dp"
+                android:text="Date"
+                android:textAlignment="viewStart"
+                android:textColor="#000"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/cardView"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.cardview.widget.CardView
@@ -78,17 +93,29 @@
                         app:srcCompat="@drawable/ic_baseline_more_vert_24" />
 
                     <TextView
-                        android:id="@+id/auditViewActivityDescription"
+                        android:id="@+id/auditViewActivityType"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:padding="2dp"
-                        android:text="TextView"
+                        android:text="Type"
                         android:textAlignment="viewStart"
                         android:textColor="#000000"
                         android:textSize="14sp"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/auditViewMenuIcon"
+                        app:layout_constraintEnd_toStartOf="@+id/auditActivityTime"
                         app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/auditActivityTime"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:padding="2dp"
+                        android:text="Time"
+                        android:textAlignment="viewStart"
+                        android:textColor="#000000"
+                        android:textSize="14sp"
+                        app:layout_constraintEnd_toStartOf="@+id/auditViewMenuIcon"
                         app:layout_constraintTop_toTopOf="parent" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
