--- a/app/src/main/res/layout/calendar_layout.xml
+++ b/app/src/main/res/layout/calendar_layout.xml
@@ -10,37 +10,38 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:orientation="horizontal"
         android:paddingTop="8dp"
-        android:paddingBottom="8dp"
-        android:background="@android:color/holo_orange_dark">
+        android:paddingBottom="8dp">
 
         <ImageButton
-            android:layout_width="40dp"
-            android:layout_height="40dp"
             android:id="@+id/previousBtn"
-            android:background="@drawable/ic_baseline_arrow_back_24"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_margin="10dp"
-            />
+            android:background="@drawable/ic_baseline_arrow_back_24"
+            android:backgroundTint="@color/colorAccent" />
+
         <TextView
+            android:id="@+id/current_Date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:layout_weight="3"
             android:gravity="center"
-            android:layout_marginTop="4dp"
             android:text="CurrentDate"
-            android:id="@+id/current_Date"
-            android:textColor="@android:color/white"
-            android:textStyle="bold"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="18sp"
-            android:layout_weight="3"/>
+            android:textStyle="bold" />
 
         <ImageButton
-            android:layout_width="40dp"
-            android:layout_height="40dp"
             android:id="@+id/nextBtn"
-            android:background="@drawable/ic_baseline_arrow_forward_24"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_margin="10dp"
-            />
+            android:background="@drawable/ic_baseline_arrow_forward_24"
+            android:backgroundTint="@color/colorAccent" />
     </LinearLayout>
 
     <LinearLayout
@@ -49,14 +50,15 @@
         android:orientation="horizontal"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
-        android:background="@color/colorPrimary">
+        android:background="@color/white">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Sun"
-            android:background="@android:color/holo_blue_dark"
+            android:textColor="@color/colorPrimaryDark"
+            android:background="@color/white"
             android:layout_marginTop="4dp"
             android:layout_weight="1"
             android:textStyle="bold"
@@ -66,7 +68,8 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Mon"
-            android:background="@android:color/holo_orange_light"
+            android:textColor="@color/colorPrimaryDark"
+            android:background="@color/white"
             android:layout_marginTop="4dp"
             android:layout_weight="1"
             android:textStyle="bold"
@@ -76,7 +79,8 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Tue"
-            android:background="@android:color/holo_green_light"
+            android:textColor="@color/colorPrimaryDark"
+            android:background="@color/white"
             android:layout_marginTop="4dp"
             android:layout_weight="1"
             android:textStyle="bold"
@@ -86,7 +90,8 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Wed"
-            android:background="@android:color/holo_red_light"
+            android:textColor="@color/colorPrimaryDark"
+            android:background="@color/white"
             android:layout_marginTop="4dp"
             android:layout_weight="1"
             android:textStyle="bold"
@@ -96,7 +101,8 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Thu"
-            android:background="@android:color/holo_purple"
+            android:textColor="@color/colorPrimaryDark"
+            android:background="@color/white"
             android:layout_marginTop="4dp"
             android:layout_weight="1"
             android:textStyle="bold"
@@ -106,7 +112,8 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Fri"
-            android:background="@android:color/white"
+            android:textColor="@color/colorPrimaryDark"
+            android:background="@color/white"
             android:layout_marginTop="4dp"
             android:layout_weight="1"
             android:textStyle="bold"
@@ -116,7 +123,8 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Sat"
-            android:background="@android:color/darker_gray"
+            android:textColor="@color/colorPrimaryDark"
+            android:background="@color/white"
             android:layout_marginTop="4dp"
             android:layout_weight="1"
             android:textStyle="bold"
