--- a/app/src/main/res/layout/content_edit_saved_audit.xml
+++ b/app/src/main/res/layout/content_edit_saved_audit.xml
@@ -22,7 +22,7 @@
             android:layout_marginBottom="20dp">
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/professionTextLayout"
+                android:id="@+id/editProfessionTextLayout"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -32,26 +32,15 @@
                 android:hint="Profession">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/professionText"
+                    android:id="@+id/editProfessionText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <TextView
-                android:id="@+id/cpdNumHelper"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="TextView"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                android:layout_margin="16dp"
-                android:layout_gravity="center"/>
-
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/cpdNumberLayout"
+                android:id="@+id/editCpdNumberLayout"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -61,7 +50,7 @@
                 android:hint="CPD Number">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/cpdNumber"
+                    android:id="@+id/editCpdNumber"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
 
@@ -80,7 +69,7 @@
 
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/summaryTextLayout"
+                android:id="@+id/editSummaryTextLayout"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -93,7 +82,7 @@
                 android:hint="Summary (max 500 words)">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/summaryText"
+                    android:id="@+id/editSummaryText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
 
@@ -111,7 +100,7 @@
                 android:text="TextView"/>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/personalStatementTextLayout"
+                android:id="@+id/editPersonalStatementTextLayout"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -124,32 +113,22 @@
                 android:hint="Personal Statement (max 1500 words)">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/personalStatementText"
+                    android:id="@+id/editPersonalStatementText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <TextView
-                android:id="@+id/evidenceHelper"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                android:textColor="@color/colorPrimaryDark"
-                android:layout_gravity="center"
-                android:text="TextView"/>
-
             <Button
-                android:id="@+id/SupportingEvidenceBtn"
+                android:id="@+id/saveEditAuditBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
-                android:text="Select Supporting Evidence"
+                android:text="Next"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
+
 
         </LinearLayout>
 
