--- a/app/src/main/res/layout/show_events_rowlayout.xml
+++ b/app/src/main/res/layout/show_events_rowlayout.xml
@@ -8,9 +8,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="15dp"
-        app:cardElevation="12sp">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -20,7 +18,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:textColor="@android:color/holo_blue_dark"
+                android:textColor="@color/colorPrimaryDark"
                 android:id="@+id/eventdate"
                 android:textStyle="bold"
                 android:text="Date"
@@ -31,7 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:textColor="@android:color/holo_purple"
+                android:textColor="@color/colorPrimary"
                 android:id="@+id/eventname"
                 android:textStyle="bold"
                 android:text="Event"
@@ -44,8 +42,9 @@
                 android:gravity="center"
                 android:id="@+id/eventtime"
                 android:textStyle="bold"
+                android:textColor="@color/colorPrimaryDark"
                 android:text="Time"
-                android:textSize="20sp"
+                android:textSize="15sp"
                 />
 
             <ImageButton
@@ -62,7 +61,6 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/delete"
                 android:text="Delete"
-                android:textAllCaps="false"
                 android:layout_margin="10dp"/>
 
         </LinearLayout>
