--- a/app/src/main/res/layout/single_cell_layout.xml
+++ b/app/src/main/res/layout/single_cell_layout.xml
@@ -8,16 +8,16 @@
         android:layout_height="wrap_content"
         android:id="@+id/calendar_day"
         android:text="1"
-        android:textStyle="bold"
+        android:textColor="@color/colorPrimaryDark"
         android:layout_gravity="center"
-        android:textSize="20sp"/>
+        android:textSize="16sp"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:textSize="9sp"
         android:id="@+id/events_id"
-        android:textColor="@android:color/white"
+        android:textColor="@color/colorAccent"
         android:layout_gravity="center"/>
 
 </LinearLayout>
