--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="pie_yellow">#f1c40f</color>
     <color name="pie_red">#e74c3c</color>
     <color name="pie_blue">#3498db</color>
-    <color name="pie_purple">#512DA8</color>
+    <color name="pie_purple">#856cc2</color>
 
     <color name="rcsltYellow">#FFF117</color>
     <color name="rcsltDarkBlue">#2F334F</color>
